working version but without a working "build all" switch