@@ -1,7 +1,10 @@
 package com.ista.dmi.service;
 
 import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.util.Arrays;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -13,25 +16,20 @@ public class ShellCommandExecutor {
 
   private final Logger LOGGER = LoggerFactory.getLogger(ShellCommandExecutor.class);
 
-  public void executeCommand(String command) {
-    StringBuffer output = new StringBuffer();
+  public int executeCommand(String command) {
 
-    Process p;
+    Process p = null;
     try {
-      p = Runtime.getRuntime().exec("cmd /c " + command);
+      ProcessBuilder pb = new ProcessBuilder("cmd.exe", "/c", command);
+      pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+      pb.redirectError(ProcessBuilder.Redirect.INHERIT);
+      p = pb.start();
+
       p.waitFor();
-      BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
-
-      String line = "";
-      while ((line = reader.readLine()) != null) {
-        output.append(line + "\n");
-      }
-
     } catch (Exception e) {
-      LOGGER.error("Exception caught {}", e);
+      LOGGER.error("Exception caught", e);
     }
-
-    LOGGER.info(output.toString());
+    return p.exitValue();
   }
 
 }
